--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "youshare",
   "version": "1.0.0",
-  "description": "A backend for vedio sharing platform",
+  "description": "A backend for video sharing platform",
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon -r dotenv/config --experimental-json-modules src/index.js"
   },
   "keywords": [
     "javascript",
@@ -16,5 +16,10 @@
   "devDependencies": {
     "nodemon": "^3.1.4",
     "prettier": "^3.3.3"
+  },
+  "dependencies": {
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mongoose": "^8.5.3"
   }
 }
